# MUSAHIT

./: .env.example  .gitignore  002_add_article_metadata.sql  ADR-001-architecture-overview.md  ADR-002-llm-stack.md  ADR-003-source-registry-and-bands.md  ADR-005-bias-promotion-rules.md  ADR-006-storage.md  ADR-007-scheduler-and-liveness.md  ADR-008-story-arc-model.md  ADR-009-briefing-template.md  ADR-010-tts-and-delivery.md  ADR-013-source-registry-amendments.md  ADR-014-article-id-formula.md  ADR-015-article-metadata-typed-columns.md  BOOTSTRAP.md  LICENSE  README.md  config.toml  pyproject.toml  task-as-stored.xml
ADR/: ADR-004-defcon-schema.md  ADR-005-bias-promotion-rules.md  ADR-011-dashboard.md  ADR-012-failure-and-retention.md
data/: musahit.duckdb.wal
docs/: operator-runbook.md
memory/: MEMORY.md  build-progress.md  operator-tasks.md
musahit/: __init__.py  orchestrator.py  pipeline.py  stages.py
scripts/: check_run.py  check_run_state.py  cleanup_orphan_arcs.py  diagnose_fks.py  diagnose_tts.py  init_db.py  reset_stuck_run.py  run_first_smoke.ps1  smoke_tts.py
tests/: conftest.py  test_arc_evolution.py  test_arc_freshness_integration.py  test_arcs_freshness.py  test_centroid.py  test_classifier.py  test_cluster_embed_integration.py  test_clusterer.py  test_defcon.py  test_embedder.py  test_gazette_parsing.py  test_gov_http.py  test_html.py  test_init_db.py  test_linker.py  test_matching.py  test_normalize_entities.py  test_normalize_extractors.py  test_normalize_language.py  test_normalizer.py  test_orchestrator.py  test_pipeline_cli.py  test_poller.py  test_promotion.py  (+5 more)
(+152 files in other folders)
