[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musahit"
version = "0.1.0"
description = "MÜŞAHİT · personal Turkish OSINT briefing system"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "duckdb>=0.10",
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.9",
    "langdetect>=1.0.9",
    "praw>=7.7",
    "pdfplumber>=0.11",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "selectolax>=0.3",
    "markdown-it-py>=3.0",
    "python-multipart>=0.0.9",
    # TTS (ADR-010 amended 2026-05-23 · Python package · NO subprocess)
    "piper-tts>=1.4.2",
    # MP3 encoding · ffmpeg must be in PATH at runtime (operator install)
    "pydub>=0.25.1",
    # Python 3.13 removed the stdlib audioop module that pydub depends on.
    # The audioop-lts package is the maintained backport — required for 3.13+.
    "audioop-lts>=0.2.2; python_version >= '3.13'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["musahit*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
